# dagster-poor-mans-data-lake

./: population.parquet  pyproject.toml  setup.py
