[tool.poetry]
name = "dagster-poor-mans-data-lake"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dagster_poor_mans_data_lake"}]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "1.1.10"
pandas = "^1.5.2"
localstack = "^1.3.1"
awscli = "1.25.97"
awscli-local = "0.20"
duckdb = "0.6.1"
sqlescapy = "1.0.1"
lxml = "4.9.2"
dagit = "1.1.10"
pyarrow = "10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
